--- a/vue-webpack-ts-template/package.json
+++ b/vue-webpack-ts-template/package.json
@@ -41,7 +41,8 @@
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "webpackbar": "^7.0.0"
   },
   "dependencies": {
     "axios": "^1.9.0",
