--- a/express-ts-template/package.json
+++ b/express-ts-template/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^8.33.1",
     "bcrypt": "^6.0.0",
     "clean-webpack-plugin": "^4.0.0",
+    "cors": "^2.8.5",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
