--- a/vue-webpack-ts-template/package.json
+++ b/vue-webpack-ts-template/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-vue": "^10.1.0",
     "html-webpack-plugin": "^5.6.3",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "sass": "^1.89.1",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
@@ -45,7 +46,6 @@
     "webpackbar": "^7.0.0"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "pinia-plugin-persistedstate": "^4.3.0"
+    "axios": "^1.9.0"
   }
 }
